--- a/Hanime/nbproject/project.properties
+++ b/Hanime/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +39,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -66,7 +66,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
