add: recaptcha google

--- a/Hanime/web/WEB-INF/web.xml
+++ b/Hanime/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>SignoutServlet</servlet-name>
         <servlet-class>routes.SignoutServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ForgotPassword</servlet-name>
+        <servlet-class>routes.ForgotPassword</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SignupServlet</servlet-name>
         <url-pattern>/signup</url-pattern>
@@ -32,9 +36,25 @@
         <servlet-name>SignoutServlet</servlet-name>
         <url-pattern>/signout</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ForgotPassword</servlet-name>
+        <url-pattern>/recovery</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-pages/404.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error-pages/500.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error-pages/403.jsp</location>
+    </error-page>
 </web-app>
