--- a/Hanime/nbproject/project.properties
+++ b/Hanime/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.javax.mail.jar=lib\\javax.mail.jar
+file.reference.org.json.jar=lib\\org.json.jar
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -39,7 +41,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.org.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
