done: reset password

--- a/Hanime/web/WEB-INF/web.xml
+++ b/Hanime/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>ForgotPassword</servlet-name>
         <servlet-class>routes.ForgotPassword</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ResetPassword</servlet-name>
+        <servlet-class>routes.ResetPassword</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SignupServlet</servlet-name>
         <url-pattern>/signup</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>ForgotPassword</servlet-name>
         <url-pattern>/recovery</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ResetPassword</servlet-name>
+        <url-pattern>/reset</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
