--- a/Hanime/nbproject/project.properties
+++ b/Hanime/nbproject/project.properties
@@ -29,8 +29,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.org.json.jar=lib\\org.json.jar
+file.reference.servlet3.1-jsp2.3-api.jar=lib\\servlet3.1-jsp2.3-api.jar
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +46,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.org.json.jar}
+    ${file.reference.org.json.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.servlet3.1-jsp2.3-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
