add: watch video, comment using realtime processing

--- a/Hanime/nbproject/project.properties
+++ b/Hanime/nbproject/project.properties
@@ -34,7 +34,7 @@ file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.j
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.org.json.jar=lib\\org.json.jar
 file.reference.servlet3.1-jsp2.3-api.jar=lib\\servlet3.1-jsp2.3-api.jar
-file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
+file.reference.yuyu-db.jar=lib\\yuyu-db.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,12 +44,12 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.org.json.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.servlet3.1-jsp2.3-api.jar}
+    ${file.reference.servlet3.1-jsp2.3-api.jar}:\
+    ${file.reference.yuyu-db.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
