--- a/Hanime/nbproject/project.properties
+++ b/Hanime/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javatuples-1.2.jar=lib\\javatuples-1.2.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.org.json.jar=lib\\org.json.jar
 file.reference.servlet3.1-jsp2.3-api.jar=lib\\servlet3.1-jsp2.3-api.jar
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.servlet3.1-jsp2.3-api.jar}:\
-    ${file.reference.yuyu-db.jar}
+    ${file.reference.yuyu-db.jar}:\
+    ${file.reference.javatuples-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
